--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
+html {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Chivo';
     background-color: #e3dfff;
     color: #222222;
-    margin-left: 20em;
-    margin-right: 20em;
-    margin-bottom: 5em;
-    margin-top: 30em
 }
 
 p {margin-bottom: 1.3em; font-size: 1.2em;}
@@ -57,15 +58,59 @@ small, .font_small {font-size: 0.667em;}
 #header {
     background-repeat: repeat;
     position: absolute;
-    padding-top: 10em;
     padding-left: 20em;
     padding-right: 20em;
     top: 0;
     left: 0;
     background-attachment: fixed;
     box-shadow: inset 0px -42px 42px -42px rgba(0,0,0,0.75);
+    width: 100vw;
+    height: 25em
 }
 
+#header h1 {
+    width: calc(100vw - 10em);
+    position: absolute;
+    bottom: 0;
+}
+
+.card {
+    padding: 15px;
+    background-color: #FFE1A8;
+    margin: 5px;
+    text-align: center;
+}
+
+.purpleBG {
+    background-color: #930E67 !important
+}
+
+/* unvisited link */
+a:link {
+    color: #222222;
+}
+
+/* visited link */
+a:visited {
+    color: #222222;
+}
+
+/* mouse over link */
+a:hover {
+    color: #222222;
+}
+
+/* selected link */
+a:active {
+    color: #e3dfff;
+}
+
+.actualBody {
+    margin-left: 20em;
+    margin-right: 20em;
+    margin-bottom: 5em;
+    margin-top: 30em;
+}
 
 /* responsive! */
 
