--- a/index.css
+++ b/index.css
@@ -58,22 +58,19 @@ small, .font_small {font-size: 0.667em;}
 #header {
     background-repeat: repeat;
     position: absolute;
-    padding-left: 20em;
-    padding-right: 20em;
     top: 0;
     left: 0;
     background-attachment: fixed;
-    box-shadow: inset 0px -42px 42px -42px rgba(0,0,0,0.75);
-    width: 100vw;
+    width: 100%;
     height: 25em;
 }
 
-#header h1 {
-    width: calc(100vw - 10em);
+#header div {
+    max-width: 60em;
     position: absolute;
     bottom: 0;
+    left: 20em;
 }
-
 .card {
     padding: 15px;
     background-color: #FFE1A8;
@@ -124,7 +121,7 @@ a:active {
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait) {
-      body {
+      .actualBody {
         margin-left: 5em;
         margin-right: 5em;
       }
